[package]
name = "whitelist_rs"
version = "0.1.0"
authors = ["wzv5 <wzv5@msn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10"
tokio = "0.2"
serde = "1.0"
serde_json = "1.0"
lru_time_cache = "0.11"
url = "2.2"
actix-web = "3.2"
actix-rt = "1.1"
log = "0.4"
env_logger = "0.8"

[profile.release]
lto = true
codegen-units = 1
