[package]
name = "whitelist_rs"
version = "0.1.0"
authors = ["wzv5 <wzv5@msn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1"
env_logger = "0.9"
futures-util = "0.3"
hyper = { version = "0.14", features = ["http1", "server", "runtime"] }
log = "0.4"
lru_time_cache = "0.11"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "time", "macros"] }
url = "2.2"

[profile.release]
lto = true
codegen-units = 1
