[package]
name = "whitelist_rs"
version = "0.1.0"
authors = ["wzv5 <wzv5@msn.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
hyper = { version = "0.14.27", features = ["http1", "server", "runtime"] }
log = "0.4.20"
lru_time_cache = "0.11.11"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_urlencoded = "0.7.1"
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "time", "macros"] }
ureq = "2.7.1"
url = "2.4.1"

[profile.release]
lto = true
codegen-units = 1
